--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,3 @@
-Apps for users to make life easier.
-<br/>
+<h2>Apps for users to make life easier</h2>
+<br/><br/>
 Contact: karizmamyeter@gmail.com
